update index page

--- a/packages/pure/components/basic/Footer.astro
+++ b/packages/pure/components/basic/Footer.astro
@@ -59,35 +59,35 @@ const footerLink1 = footerConf.links?.filter(({ pos }) => pos === 1) || []
             )
           }
         </div>
-        {
+        <!-- {
           footerConf.credits && (
             <span>
               <a href='https://github.com/withastro/astro' target='_blank'>
                 Astro
               </a>
               &
-              <a href='https://github.com/cworld1/astro-theme-pure' target='_blank'>
+              <a href='https://github.com/susansilver' target='_blank'>
                 Pure
               </a>
               theme powered
             </span>
           )
-        }
+        } -->
       </div>
 
       {/* Social Brands */}
       <div class='flex items-center gap-x-4'>
         {
-          footerConf.social &&
-            Object.entries(footerConf.social).map(([platform, { label, url }]) => (
-              <a
-                class='inline-block text-muted-foreground transition-all hover:text-muted-foreground/75'
-                href={url}
-                aria-label={label}
-              >
-                <Icon name={platform as keyof typeof footerConf.social} />
-              </a>
-            ))
+          // footerConf.social &&
+          //   Object.entries(footerConf.social).map(([platform, { label, url }]) => (
+          //     <a
+          //       class='inline-block text-muted-foreground transition-all hover:text-muted-foreground/75'
+          //       href={url}
+          //       aria-label={label}
+          //     >
+          //       <Icon name={platform as keyof typeof footerConf.social} />
+          //     </a>
+          //   ))
         }
       </div>
     </div>
