remove copyright section from blog articles

--- a/packages/pure/components/pages/Copyright.astro
+++ b/packages/pure/components/pages/Copyright.astro
@@ -64,14 +64,14 @@ const shares = {
       )
     }
     <div class='flex gap-x-2 sm:flex-col'>
-      <span>Copyright</span>
+      <!-- <span>Copyright</span>
       <a
         class='text-sm text-foreground max-sm:place-self-center'
         href='https://creativecommons.org/licenses/by/4.0/'
         target='_blank'
       >
         CC BY-NC-SA 4.0
-      </a>
+      </a> -->
     </div>
   </div>
 
@@ -111,14 +111,14 @@ const shares = {
 </div>
 
 <div class='mx-6 rounded-b-xl border border-t-0 px-3 pb-1.5 pt-1 sm:mx-8 sm:px-4'>
-  <a
+  <!-- <a
     href='/projects#sponsorship'
     class='flex items-center justify-between text-muted-foreground no-underline'
     target='_blank'
   >
     <span>Buy me a cup of coffee ☕.</span>
     <Icon class='box-content size-5 p-1' name='receive-money' />
-  </a>
+  </a> -->
 </div>
 
 <script>
