--- a/src/pages/links/index.astro
+++ b/src/pages/links/index.astro
@@ -8,17 +8,54 @@ import PageLayout from '@/layouts/CommonPage.astro'
 import FriendList from '@/components/links/FriendList.astro'
 
 const headings = [
-  { depth: 2, slug: 'common-links', text: 'Common Links' },
-  { depth: 2, slug: 'special-links', text: 'Special Links' },
-  { depth: 2, slug: 'apply-links', text: 'Apply Links' }
+  { depth: 2, slug: 'sunshine-stitchers', text: 'Sunshine Stitchers' },
+  { depth: 2, slug: 'catkin', text: 'Catkin and Lillie' },
+  { depth: 2, slug: 'adelaide', text: 'Adelaide Stitches' },
+  { depth: 2, slug: 'aussie', text: 'An Aussie and Kiwi go travelling' },
+  { depth: 2, slug: 'blacksheepmeet', text: 'Blacksheepmeet' },
+  { depth: 2, slug: 'cinema', text: 'cin3maticstitches' },
+  { depth: 2, slug: 'bunny', text: 'Cross Stitch Bunny' },
+  { depth: 2, slug: 'globe', text: 'Cross Stich the Globe' },
+  { depth: 2, slug: 'enfys', text: 'Enfys' },
+  { depth: 2, slug: 'helen', text: 'Helen D.' },
+  { depth: 2, slug: 'charlie', text: 'Stitching with Charlie' },
+  { depth: 2, slug: 'stuart', text: 'Stuart in Stitches' },
+  { depth: 2, slug: '614-stitcher', text: 'The 614 Stitcher' }
 ]
 
 const { friends } = links
 const linksConf = config.integ.links
 ---
 
-<PageLayout title="Who I'm Watching" info='/links'>
-  <h2>Sunshine Stitchers</h2>
+<PageLayout title="Who I'm Watching" {headings} info='/links'>
+  This is a lit of my favorite Flosstubers! If you haven't, check them out. Let me know who I should
+  watch in the comments.
+
+  <h2 id='sunshine-stitchers'>Sunshine Stitchers</h2>
   <LinkPreview href='https://www.youtube.com/@SunshineStitchers' />
-  <Comment slot='bottom' />
+  <h2 id='catkin'>Catkin and Lillie</h2>
+  <LinkPreview href='https://www.youtube.com/@catkinandlillie' />
+  <h2 id='adelaide'>SAdelaide Stitches</h2>
+  <LinkPreview href='https://www.youtube.com/@adelaidestitches' />
+  <h2 id='aussie'>An Aussie and Kiwi go travelling</h2>
+  <LinkPreview href='https://www.youtube.com/@anaussieandkiwigotravelling' />
+  <h2 id='blacksheepmeet'>Blacksheepmeet</h2>
+  <LinkPreview href='https://www.youtube.com/@Blacksheepmeet' />
+  <h2 id='cinema'>cin3maticstitches</h2>
+  <LinkPreview href='https://www.youtube.com/@cin3maticstitches' />
+  <h2 id='bunny'>Cross Stitch Bunny</h2>
+  <LinkPreview href='https://www.youtube.com/@CrossStitchBunny' />
+  <h2 id='globe'>Cross Stitch the Globe</h2>
+  <LinkPreview href='https://www.youtube.com/@CrossStitchtheGlobe' />
+  <h2 id='enfys'>Enfys</h2>
+  <LinkPreview href='https://www.youtube.com/@sleepygoblincrafts' />
+  <h2 id='helen'>Helen D.</h2>
+  <LinkPreview href='https://www.youtube.com/@helend.flosstube' />
+  <h2 id='charlie'>Stitching with Charlie</h2>
+  <LinkPreview href='https://www.youtube.com/@stitchingwithcharlie' />
+  <h2 id='stuart'>Stuart in Stitches</h2>
+  <LinkPreview href='https://www.youtube.com/@stuartsinstitches' />
+  <h2 id='614-stitcher'>The 614 Stitcher</h2>
+  <LinkPreview href='https://www.youtube.com/@the614stitcher' />
+  <Comment slot=' bottom' />
 </PageLayout>
