fix comment box

--- a/src/pages/links/index.astro
+++ b/src/pages/links/index.astro
@@ -57,5 +57,5 @@ const linksConf = config.integ.links
   <LinkPreview href='https://www.youtube.com/@stuartsinstitches' />
   <h2 id='614-stitcher'>The 614 Stitcher</h2>
   <LinkPreview href='https://www.youtube.com/@the614stitcher' />
-  <Comment slot=' bottom' />
+  <Comment />
 </PageLayout>
