add about and comment policy

--- a/src/pages/watching/index.astro
+++ b/src/pages/watching/index.astro
@@ -34,8 +34,19 @@ const linksConf = config.integ.links
   <h2 id='sunshine-stitchers'>Sunshine Stitchers</h2>
   <LinkPreview href='https://www.youtube.com/@SunshineStitchers' />
   <h2 id='catkin'>Catkin and Lillie</h2>
+
+  <p>
+    Kat also has a Patreon where you can chat with other cross stichers! I am am member and we are
+    an international group i.e their are a few Americans there.
+  </p>
+
+  <p>
+    <a href='https://www.patreon.com/catkinandlillie' target='_blank'>Catkin and Lillie Patreon</a>
+  </p>
+
+  <h3>YouTube</h3>
   <LinkPreview href='https://www.youtube.com/@catkinandlillie' />
-  <h2 id='adelaide'>SAdelaide Stitches</h2>
+  <h2 id='adelaide'>Adelaide Stitches</h2>
   <LinkPreview href='https://www.youtube.com/@adelaidestitches' />
   <h2 id='aussie'>An Aussie and Kiwi go travelling</h2>
   <LinkPreview href='https://www.youtube.com/@anaussieandkiwigotravelling' />
