add umami stats

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -112,3 +112,8 @@ const socialImageURL = new URL(ogImage ? ogImage : '/images/social-card.png', As
     </script>
   )
 }
+
+<script
+  defer
+  src='https://cloud.umami.is/script.js'
+  data-website-id='8671dda1-a45e-4cc4-bd9a-008170ef5788'></script>
